fix columns to right of sidebar wrapping to next line

--- a/ngRefTracker/src/app/components/home/home.component.css
+++ b/ngRefTracker/src/app/components/home/home.component.css
@@ -22,7 +22,7 @@
 .banner-title {
   background-color: white;
   padding: 100px;
-  margin-top: 110px;
+  margin-top: 75px;
 }
 
 .banner-bottom-left {
