--- a/ngRefTracker/src/styles.css
+++ b/ngRefTracker/src/styles.css
@@ -213,3 +213,10 @@ a:hover,
 .header-highlighter {
   background-color: #b24251;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.no-wrap {
+  flex-wrap: nowrap;
+}
